syntax = "proto3";

option objc_class_prefix = "DDJ";

package kvprobuf;

service DDJkv {
  rpc AscendIterate(Slice) returns (AscendIterateResponse){}
  rpc Put(Slice) returns (PutResponse) {}
  rpc Get(Slice) returns (GetResponse) {}
  rpc Delete(Slice) returns (DeleteResponse) {}
}

message Slice {
  uint64  Key = 1;
  bytes   Value = 2;
  bool    IncludeStart = 3;
}

message AscendIterateResponse {
  repeated  Slice slice = 1;
}

message PutResponse {
    bool  Success = 1;
}

message GetResponse{
    Slice slice = 1;
}

message DeleteResponse{
    bool  Success = 1;
    bytes Value = 2;
}